<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clase2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="folderit.net.ejemplos.clase2.Clase2Activity">

    <Button
        android:id="@+id/button_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datepicker" />

    <Button
        android:id="@+id/button_timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timepicker" />


    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast" />

    <Button
        android:id="@+id/button_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog" />

    <Button
        android:id="@+id/button_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snack_bar" />

    <Button
        android:id="@+id/listview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview" />

</LinearLayout>
