<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="folderit.net.ejemplos.MainActivity">


    <Button
        android:id="@+id/button_clase2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clase_2" />

    <Button
        android:id="@+id/button_clase3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clase_3" />

    <Button
        android:id="@+id/button_clase4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clase_4" />

    <Button
        android:id="@+id/button_clase5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clase_5" />

    <Button
        android:id="@+id/button_clase6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clase_6" />
</LinearLayout>
